src/test/deca/syntax/valid/created/testsGeneraux/moduloPrintln.deca
// Description :
//    Test de l'opération arithmétique avec l'opérateur modulo (%)
//
// Résultats :
//    ok

{
    int x = 10 % 2;
    println(x);
}
